@@ -201,7 +201,6 @@ class WorkflowToolTests(ZopeTestCase.PortalTestCase):
                                                          'WorkspaceReader' : "python:level > stack.getCurrentLevel() and 1 or nothing",
                                                          },
                                   'empty_stack_manage_guard':{'guard_roles':'Owner; WorkspaceManager'},
-                                  'manager_stack_ids':['Associates', 'Observers'],
                                   'manager_stack_roles': ['Manager'], # Manager bypass
                                   },
                        'Associates': {'stackdef_type' : 'Simple Stack Definition',
@@ -209,14 +208,14 @@ class WorkflowToolTests(ZopeTestCase.PortalTestCase):
                                       'var_id':'Associates',
                                       'managed_role_exprs':{'WorkspaceMember': 'python:1',},
                                       'empty_stack_manage_guard':{'guard_roles':'Owner; WorkspaceMember'},
-                                      'manager_stack_ids':['Observers'],
+                                      'manager_stack_ids':['Pilots'],
                                       },
                        'Observers': {'stackdef_type' : 'Simple Stack Definition',
                                      'stack_type': 'Simple Stack',
                                      'var_id':'Observers',
                                      'managed_role_exprs':{'WorkspaceReader': 'python:1',},
                                      'empty_stack_manage_guard':{'guard_roles':'Owner; WorkspaceReader'},
-                                     'manager_stack_ids':[],
+                                     'manager_stack_ids':['Pilots', 'Associates'],
                                      },
                        },
             push_on_workflow_variable = ['Pilots', 'Associates', 'Observers'],
